# Proyecto-Calico-2050

./: .gitignore  Biopython  Cargo.toml  MOBILE_README.md  README.md  SECURITY_ARCHITECTURE.md  TECHNICAL_ROADMAP.md
.github/workflows/: mobile-ci-cd.yml
Proyecto Calico 2050/: BiomedicinaMolecular.spec  README.md  biomedicina_molecular.py
android/app/src/main/java/com/quantumenergyos/: QuantumEnergyOSBridge.java
android/app/src/main/jni/: Android.mk  Application.mk  quantum_energy_os_jni.c
docker/: Dockerfile.dev
fastlane/: Fastfile
frontend/: app.json  babel.config.js  index.js  package.json  tsconfig.json
frontend/src/: App.tsx  quantum_energy_os.ts
ios/: QuantumEnergyOS.h  QuantumEnergyOSBridge.swift  module.modulemap
rust/: Cargo.toml  build.rs  quantum_energy_bridge.udl
rust/src/: lib.rs
src/: main.rs
