[package]
name = "quantum_energy_os"
version = "0.1.0"
edition = "2021"
description = "QuantumEnergyOS: Rust kernel for QuantumEnergyOS mobile app with photonic-bridge and QAOA/VQE optimization"
license = "MIT"
repository = "https://github.com/Calico-2050/Proyecto-Calico-2050"

[lib]
name = "quantum_energy_os"
crate-type = ["staticlib", "cdylib"]  # staticlib for iOS, cdylib for Android

[dependencies]
# UniFFI - Core FFI framework for mobile bridging
uniffi = { version = "0.28", features = ["builtin-bindgen"] }
uniffi_build = "0.28"

# Core utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

# Parallel processing (for photonic-bridge acceleration)
rayon = "1.10"
crossbeam = "0.8"

# Linear algebra and numeric computing (quantum simulations)
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"

# Quantum computing simulation crate (OpenQASM-inspired)
quantum = "0.8"  # Placeholder - actual quantum crates: qiskit-rs, quil-rs, or custom

# Secure enclave integration
apple-secure-enclave = { version = "0.5", optional = true }  # iOS Secure Enclave
android-keystore = { version = "0.4", optional = true }      # Android KeyStore

# Platform-specific cryptography
ring = "0.17"
rcgen = "0.13"

# Network (for future API communication)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# Performance monitoring
metrics = "0.21"
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[build-dependencies]
uniffi_build = "0.28"

[features]
default = []
# Platform-specific feature flags
ios = ["apple-secure-enclave"]
android = ["android-keystore"]
network = ["reqwest", "tokio"]
metrics = ["prometheus"]

# Build configuration for mobile targets
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
</content>